# flite-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
flite/: Cargo.toml  README.md
flite-cli/: Cargo.toml  README.md
flite-cli/src/: main.rs
flite-sys/: Cargo.toml  README.md  build.rs  wrapper.h
flite-sys/src/: bindings.rs
flite/src/: lib.rs
