[package]
name = "flite-cli"
version = "0.0.1"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "API bindings for flite"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/flite"
repository = "https://github.com/randomairborne/flite-rs"
keywords = ["tts", "flite", "text-to-speech"]
categories = ["multimedia::audio"]

[dependencies]
flite = "0.0.3"
hound = "3.5"